Archive2/ff/b43690c633ed0d/output
main.cpp: In function 'int main()':
main.cpp:10:10: error: call of overloaded 'C(int)' is ambiguous
     C c(5);
          ^
main.cpp:10:10: note: candidates are:
main.cpp:4:5: note: C::C(double)
     C(double){}
     ^
main.cpp:3:5: note: C::C(long double)
     C(long double){}
     ^
main.cpp:1:7: note: constexpr C::C(const C&)
 class C 
       ^
main.cpp:1:7: note: constexpr C::C(C&&)
